# CodeExampleLibrary

./: .gitignore  README.md
cpp/cmake/embarcadero-cmake-helloworld/: .gitignore  CMakeLists.txt  readme.md
cpp/cmake/embarcadero-cmake-helloworld/embarcadero-project/: CMakeLists.txt  embarcadero-cmake-helloworld.cbproj  embarcadero-cmake-helloworld.cbproj.local  embarcadero-cmake-helloworld.res  main.cpp  main.h
cpp/cmake/embarcadero-cmake-helloworld/standard-cpp-library/: CMakeLists.txt  README.md
cpp/cmake/embarcadero-cmake-helloworld/standard-cpp-library/HardwareTools/: CMakeLists.txt
cpp/cmake/embarcadero-cmake-helloworld/standard-cpp-library/HardwareTools/src/Encoders/AbsoluteEncoders/: MockAbsoluteEncoder.hpp
cpp/cmake/embarcadero-cmake-helloworld/standard-cpp-library/HardwareTools/tests/Encoders/AbsoluteEncoders/: MockAbsoluteEncoderTests.cpp
cpp/embarcadero/embarcadero-catch2-unit-tests/: CMakeLists.txt  WindowsApplication.cbproj  WindowsApplication.res  embarcadero-catch2-unit-tests.groupproj  main.dfm  readme.md
cpp/embarcadero/embarcadero-catch2-unit-tests/ExternalLib/: ExternalLib.cbproj
cpp/embarcadero/embarcadero-catch2-unit-tests/ExternalLib/Encoders/AbsoluteEncoders/: MockAbsoluteEncoder.cpp
cpp/embarcadero/embarcadero-catch2-unit-tests/Tests/ExternalLibTests/: ExternalLibTests.cbproj  Main.cpp
cpp/embarcadero/embarcadero-catch2-unit-tests/Tests/ExternalLibTests/Encoders/AbsoluteEncoders/: MockAbsoluteEncoderTests.cpp
cpp/embarcadero/embarcadero-catch2-unit-tests/Tests/catch2/: catch.hpp
cpp/tools/cmake/: readme.md
cpp/tools/ninja/: readme.md
web/grpc/pingpong/pingpong_cpp_client_server/: CMakeLists.txt  readme.md
web/grpc/pingpong/pingpong_cpp_client_server/src/: client.cpp  ping_pong.grpc.pb.cc  ping_pong.grpc.pb.h  ping_pong.pb.cc  ping_pong.pb.h  server.cpp
web/grpc/proto/: package-lock.json  ping_pong.proto
